Corrigindo erros e warnings contentDescription

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Netflix</string>
+    <string name="menu_mensagen">mensagem</string>
+    <string name="menu_volume">Volume</string>
+    <string name="menu_avaliacoes">Menu Avaliações</string>
+    <string name="menu_episodios">Menu episódios</string>
 </resources>
